# BashCompiler

./: .gitignore  BASHcompiler.mpz  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac  configure.qt5.ac  remakesourcelist
BashCompiler/: flagsandlibs
BashCompiler/app/: Makefile.am
BashCompiler/resources/man/: bashcompiler.1
BashCompiler/resources/pixmaps/: BashCompiler.desktop
BashCompiler/resources/scripts/: PhotoPageMakerGUI  SaferDD  Show256Cols  example1  example2  example3  example4  example5  example6  example7  example8  example9  filetests  gui.data  stringslice  stringslice2  testcase  testfor  testif  testpipeandtilde  testpipesandselect  testpipesndselect  teststringslice1.sh  teststringslice2.sh  teststringslice3.sh  teststringslice4.sh  testwhile  whileifread  whilereadexample
BashCompiler/src/: LFSTKPrefsClass.cpp  LFSTKPrefsClass.h  commands.cpp  commands.h  compiler.cpp  compiler.h  globals.h  main.cpp  parseFile.cpp  parseFile.h  qtincs.h
